// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns article results when searching article R1225-18 1`] = `
Object {
  "articles": Array [
    Object {
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "anchor": "#Comment-presenter-une-demission",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission-comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission: comment présenter une démission ?",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
    },
    Object {
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "anchor": "#L-absence-prolongee-du-salarie-est-elle-une-demission",
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission-labsence-prolongee-du-salarie-est-elle-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission: l’absence prolongée du salarié est-elle une démission ?",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#L-absence-prolongee-du-salarie-est-elle-une-demission",
    },
    Object {
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "description": "Connaître la durée du préavis de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Simulateur de durée de préavis de démission",
    },
    Object {
      "description": "Simulez simplement le montant d'une indemnité de licenciement en fonction de votre situation",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Simulateur d'indemnité de licenciement",
    },
    Object {
      "description": "La rupture anticipée du contrat à déterminée n’est possible que dans certains cas. La rupture d’un commun accord est l’un de ces cas : ce modèle permet à l’une des parties de demander à l’autre, la rupture du CDD.",
      "slug": "modele-rupture-dun-commun-accord-dun-contrat-a-duree-determinee",
      "source": "modeles_de_courriers",
      "title": "Modèle : Rupture d’un commun accord d’un contrat à durée déterminée",
    },
  ],
  "themes": Array [
    Object {
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;

exports[`returns search results for demission from datafiller 1`] = `
Object {
  "articles": Array [
    Object {
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "anchor": "#Comment-presenter-une-demission",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission-comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission: comment présenter une démission ?",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
    },
    Object {
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
  ],
  "themes": Array [
    Object {
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;

exports[`returns search results for demission from elastic 1`] = `
Object {
  "articles": Array [
    Object {
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "anchor": "#Comment-presenter-une-demission",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission-comment-presenter-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission: comment présenter une démission ?",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
    },
    Object {
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "description": "Connaître la durée du préavis de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Simulateur de durée de préavis de démission",
    },
    Object {
      "anchor": "#L-absence-prolongee-du-salarie-est-elle-une-demission",
      "description": "La démission permet au salarié de rompre son CDI de sa propre initiative. Si un délai de préavis est prévu, il doit être respecté.",
      "slug": "la-demission-labsence-prolongee-du-salarie-est-elle-une-demission",
      "source": "fiches_ministere_travail",
      "title": "La démission: l’absence prolongée du salarié est-elle une démission ?",
      "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#L-absence-prolongee-du-salarie-est-elle-une-demission",
    },
    Object {
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "description": "Simulez simplement le montant d'une indemnité de licenciement en fonction de votre situation",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Simulateur d'indemnité de licenciement",
    },
    Object {
      "description": "La rupture anticipée du contrat à déterminée n’est possible que dans certains cas. La rupture d’un commun accord est l’un de ces cas : ce modèle permet à l’une des parties de demander à l’autre, la rupture du CDD.",
      "slug": "modele-rupture-dun-commun-accord-dun-contrat-a-duree-determinee",
      "source": "modeles_de_courriers",
      "title": "Modèle : Rupture d’un commun accord d’un contrat à durée déterminée",
    },
  ],
  "themes": Array [
    Object {
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;
